Added test cube for remote control

--- a/RemoteControl/Server/VRProjectServer/VRProjectServer.csproj
+++ b/RemoteControl/Server/VRProjectServer/VRProjectServer.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Folder Include="posted\" />
     <Folder Include="posted\" />
+    <Folder Include="posted\" />
     <Folder Include="Publish\win-x64\" />
   </ItemGroup>
 
