--- a/RemoteControl/Server/VRProjectServer/VRProjectServer.csproj
+++ b/RemoteControl/Server/VRProjectServer/VRProjectServer.csproj
@@ -18,6 +18,10 @@
     <ProjectReference Include="..\..\SharedLib\SharedLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="posted\" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="del /F /Q $(ProjectDir)posted\*.*" />
   </Target>
