--- a/RemoteControl/Website/AdminPanelBlazorServer/AdminPanelBlazorServer.csproj
+++ b/RemoteControl/Website/AdminPanelBlazorServer/AdminPanelBlazorServer.csproj
@@ -15,4 +15,12 @@
     <ProjectReference Include="..\..\SharedLib\SharedLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="posted\" />
+  </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="del /F /Q $(ProjectDir)posted\*.*" />
+  </Target>
+
 </Project>
